Comprobar si se limpian los datos y validarlos

--- a/public/index.html
+++ b/public/index.html
@@ -68,11 +68,11 @@
 
     <label>Elije las occiones para recibir novedades:</label><br><br>
 
-    <input id="newshtml" type="checkbox" name="check" value="HTML">
+    <input id="newshtml" type="checkbox" name="check[]" value="HTML">
     <label for="newshtml">HTML News</label><br><br>
-    <input id="newscss" type="checkbox" name="check" value="CSS">
+    <input id="newscss" type="checkbox" name="check[]" value="CSS">
     <label for="newscss">CSS News</label><br><br>
-    <input id="newsjs" type="checkbox" name="check" value="JS">
+    <input id="newsjs" type="checkbox" name="check[]" value="JS">
     <label for="newsjs">Javascript News</label><br><br>
 
     <label>Formato del boletín:<label><br><br>
