reestruturando el codigo php chequeando las validaciones

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="./css/normalize.css">
   <link rel="stylesheet" href="./css/reset.css">
-  <title>INDEX</title>
+  <title>FORMULARIO NOTICIAS</title>
 </head>
 <body>
   <form action="../modules/include/news_reg.php" method="post">
