Convertir el array a 3 bits comprobar todos los casos

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <input type="text" name="ciudad" id="ciu"><br>
     </div>
     <div class="contact_imput">
-    <label for="communities">Autonomous communities</label><br><br>
+    <label for="communities">Comunidad</label><br><br>
                     <select name="comunidades" id="communities">
                         <option value="0" selected disabled hidden>Elije una opción</option>
                         <option value="Andalucí­a">Andalucí­a</option>
